--- a/package.json
+++ b/package.json
@@ -5,22 +5,30 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "DEBUG=app:* nodemon app.js",
+    "start": "DEBUG=app,app:* nodemon app.js",
     "lint": "eslint app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "bootstrap": "^3.4.1",
     "chalk": "^4.1.0",
+    "cookie-parser": "^1.4.5",
     "debug": "^2.6.9",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "jquery": "^3.6.0",
+    "mongodb": "^3.6.3",
     "morgan": "^1.10.0",
     "mssql": "^6.3.1",
     "nodemon": "^2.0.7",
-    "pug": "^3.0.2"
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "pug": "^3.0.2",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "eslint": "^7.22.0",
